modules/deductions-public/igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = "${aws_vpc.main-vpc.id}"

  tags = {
    Name = "${var.environment}-${var.component_name}-igw"
  }
}
